@@ -23,13 +23,16 @@
  */
 package dev.majek.hexnicks.storage;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import dev.majek.hexnicks.Nicks;
+import dev.majek.hexnicks.HexNicks;
+import java.io.FileReader;
 import java.io.IOException;
+import java.io.PrintWriter;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.serializer.gson.GsonComponentSerializer;
 import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
@@ -43,44 +46,58 @@ import org.jetbrains.annotations.NotNull;
  */
 public class JsonStorage implements StorageMethod {
 
+  private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
+
   @Override
   public CompletableFuture<Boolean> hasNick(@NotNull UUID uuid) {
-    return CompletableFuture.supplyAsync(() -> Nicks.core().getNickMap().containsKey(uuid));
+    return CompletableFuture.supplyAsync(() -> HexNicks.core().getNickMap().containsKey(uuid));
   }
 
   @Override
   @SuppressWarnings("ConstantConditions")
   public CompletableFuture<Component> getNick(@NotNull UUID uuid) {
-    return hasNick(uuid).thenApplyAsync(b -> b ? Nicks.core().getNickMap().get(uuid)
+    return hasNick(uuid).thenApplyAsync(b -> b ? HexNicks.core().getNickMap().get(uuid)
         : Component.text(Bukkit.getOfflinePlayer(uuid).getName()));
   }
 
   @Override
   public void removeNick(@NotNull UUID uuid) {
-    Nicks.core().getNickMap().remove(uuid);
+    HexNicks.core().getNickMap().remove(uuid);
     try {
-      Nicks.core().jsonConfig().removeFromJsonObject(uuid.toString());
-      Nicks.logging().debug("Removed nickname from user " + uuid + " from json.");
+      JsonObject json = (JsonObject) JsonParser.parseReader(new FileReader(HexNicks.core().jsonFile()));
+      json.remove(uuid.toString());
+      final PrintWriter writer = new PrintWriter(HexNicks.core().jsonFile());
+      writer.write(GSON.toJson(json));
+      writer.flush();
+      writer.close();
+      HexNicks.logging().debug("Removed nickname from user " + uuid + " from json.");
     } catch (final IOException ex) {
-      Nicks.logging().error("Error removing nickname from file \nUUID: " + uuid, ex);
+      HexNicks.logging().error("Error removing nickname from file \nUUID: " + uuid, ex);
     }
   }
 
   @Override
-  public void saveNick(@NotNull Player player) {
+  public synchronized void saveNick(@NotNull Player player, @NotNull Component nickname) {
     try {
-      Nicks.core().jsonConfig().putInJsonObject(player.getUniqueId().toString(), JsonParser
-          .parseString(GsonComponentSerializer.gson().serialize(Nicks.software().getNick(player))));
-      Nicks.logging().debug("Saved nickname from user " + player.getName() + " to json.");
+      JsonObject json = (JsonObject) JsonParser.parseReader(new FileReader(HexNicks.core().jsonFile()));
+      json.add(
+          player.getUniqueId().toString(),
+          GsonComponentSerializer.gson().serializeToTree(nickname)
+      );
+      final PrintWriter writer = new PrintWriter(HexNicks.core().jsonFile());
+      writer.write(GSON.toJson(json));
+      writer.flush();
+      writer.close();
+      HexNicks.logging().debug("Saved nickname from user " + player.getName() + " to json.");
     } catch (final IOException ex) {
-      Nicks.logging().error("Error saving nickname to file \nUUID: " + player.getUniqueId(), ex);
+      HexNicks.logging().error("Error saving nickname to file \nUUID: " + player.getUniqueId(), ex);
     }
   }
 
   @Override
   public CompletableFuture<Boolean> nicknameExists(@NotNull Component nickname, boolean strict, @NotNull Player player) {
     List<Component> taken = new ArrayList<>();
-    for (Map.Entry<UUID, Component> entry : Nicks.core().getNickMap().entrySet()) {
+    for (Map.Entry<UUID, Component> entry : HexNicks.core().getNickMap().entrySet()) {
       if (!entry.getKey().equals(player.getUniqueId())) {
         taken.add(entry.getValue());
       }
@@ -91,7 +108,7 @@ public class JsonStorage implements StorageMethod {
             .map(OfflinePlayer::getName)
             .filter(Objects::nonNull)
             .map(Component::text)
-            .collect(Collectors.toList())
+            .toList()
     );
     if (strict) {
       for (Component value : taken) {
